5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4254/executions/1585_2895.log
== TEST (2019-03-21 11:40:45) 
-- CODE:
#1 Quantidade de jogos
quantidade = int(input("Quantos jogos?"))
#2 Valor de cada jogo
jogos = int(input("Soma de cada jogo))
# O valor do frete
Frete = int(input("Valor do frete"))	
#Cálculo
total = quantidade * jogos + frete
						
#Saída
print(total)
						
-- ERROR:
File "XXXX", line 4
    jogos = int(input("Soma de cada jogo))
                                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:58) 
-- CODE:
#1 Quantidade de jogos
quantidade = int(input("Quantos jogos?"))
#2 Valor de cada jogo
jogos = int(input("Soma de cada jogo"))
# O valor do frete
Frete = int(input("Valor do frete"))	
#Cálculo
total = quantidade * jogos + frete
						
#Saída
print(total)
						
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    jogos = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:16) 
-- CODE:
#1 Quantidade de jogos
quantidade = int(input("Quantos jogos?"))
#2 Valor de cada jogo
jogos = float(input("Soma de cada jogo"))
# O valor do frete
Frete = int(input("Valor do frete"))	
#Cálculo
total = quantidade * jogos + frete
						
#Saída
print(total)
						
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    Frete = int(input())	
ValueError: invalid literal for int() with base 10: '78.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:28) 
-- CODE:
#1 Quantidade de jogos
quantidade = int(input("Quantos jogos?"))
#2 Valor de cada jogo
jogos = int(input("Valor jogo"))
# O valor do frete
Frete = int(input("Valor do frete"))	
#Cálculo
total = quantidade * jogos + frete
						
#Saída
print(total)
						
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    jogos = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:44:00) 
-- CODE:
#1 Quantidade de jogos
quantidade = int(input("Quantos jogos?"))
#2 Valor de cada jogo
jogos = int(input("Valor jogo"))
# O valor do frete
frete = int(input("Valor do frete"))	
#Cálculo
total = quantidade * jogos + frete
						
#Saída
print(total)
						
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    jogos = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:44:15) 
-- CODE:
#1 Quantidade de jogos
quantidade = int(input("Quantos jogos?"))
#2 Valor de cada jogo
jogos = int(input("Valor jogo"))
# O valor do frete
frete = int(input("Valor do frete"))	
#Cálculo
total = quantidade * jogos + frete
						
#Saída
print(total)
						
-- EXECUTION TIME:
0.138118
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 4, in <module>
    jogos = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:59) 
-- CODE:
#1 Quantidade de jogos
quantidade = int(input("Quantos jogos?"))
#2 Valor de cada jogo
jogos = float(input("Valor do jogo"))
# O valor do frete
frete = float(input("Valor do frete"))	
#Cálculo
total = quantidade * jogos + frete
						
#Saída
print(total)
						
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:47:26) 
-- CODE:
#1 Quantidade de jogos
quantidade = int(input("Quantos jogos?"))
#2 Valor de cada jogo
jogos = float(input("Valor do jogo"))
# O valor do frete
frete = float(input("Valor do frete"))	
#Cálculo
total = quantidade * jogos + frete
						
#Saída
print(total)
						
-- EXECUTION TIME:
0.138467
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
